timer set, some tooltip added , specific errors added in name and institute name fields

--- a/WindowsApplication1/Form Validation.vbproj
+++ b/WindowsApplication1/Form Validation.vbproj
@@ -152,6 +152,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
+    <Compile Include="this.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
